--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^4.6.4"
   },
   "devDependencies": {
+    "prettier": "2.6.2",
     "ts-node": "^10.7.0"
   },
   "scripts": {
