--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "license": "MIT",
   "dependencies": {
     "@flashbots/ethers-provider-bundle": "^0.4.3",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.32",
     "ethers": "^5.6.5",
+    "lodash": "^4.17.21",
     "typescript": "^4.6.4"
   },
   "devDependencies": {
