backrun demo workin

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "scripts": {
     "gen_keys": "npx ts-node --project tsconfig.json src/gen_keys.ts",
     "approve_trading": "npx ts-node --project tsconfig.json src/approve_trading.ts",
-    "demo": "npx ts-node --project tsconfig.json src/demo.ts",
-    "minter": "npx ts-node --project tsconfig.json src/minter_demo.ts",
+    "backrun_demo": "npx ts-node --project tsconfig.json src/backrun_demo.ts",
+    "minter_demo": "npx ts-node --project tsconfig.json src/minter_demo.ts",
     "build": "npx tsc",
     "clean": "rm -rf build/",
     "prepare": "npm run clean && npm run build",
